# Learning

./: .gitignore  LICENSE  README.md  pyproject.toml
Docker/: glossario.txt
Docker/minha versão/: Dockerfile
Flask/: environment.yml  glossario.txt  pyproject.toml
Flask/docker/: docker-compose.yaml
Flask/flask-store/: .env  Makefile  pyproject.toml  settings.toml
Flask/flask-store/app/: __init__.py  extensions.py  models.py  routes.py
Flask/flask-store/app/resources/: auth.py
Flask/flask-store/migrations/versions/: f18ee82799ba_.py
MySQL/: notes.txt
Python/: DisCo.ipynb  MQTT_test.py  Naive_Bayes_not_so_naive.ipynb  One_Class_Naive_Bayes.ipynb  Python_class.ipynb  Python_inverse_laplace.ipynb  Python_lambda.ipynb  Taylor_Diagram.ipynb  cdist_study.ipynb  kde_scipy_vs_scikit.ipynb  python_read_pdf.ipynb  serial_test.py
Python/.ipynb_checkpoints/: Python_inverse_laplace-checkpoint.ipynb  Python_lambda-checkpoint.ipynb  cdist_study-checkpoint.ipynb
Python/Anomaly_Detection/: Untitled.ipynb
Python/Bayes_SODA/: Anomaly_Detection.py  EDA_calc.py  Posterior_Probability_Space.ipynb  SODA.py  data_manipulation.py  results_stats.ipynb  var.pkl
Python/EDA_study/: Anomaly_Detection.py  EDA_calc.py  EDA_stats.ipynb  Gaussian_Mixtures _test.py  Gaussian_Mixtures_test.py  one_class_NB.py
Python/High_acquisition_rate_TSFRESH/: TSFRESH_NaN_study.ipynb  pca.sav  scaler.pkl  unified_bib.py
Python/ICA/: plot_ica_vs_pca.ipynb
Python/IoT/: MQTT_test_2.py
Python/JCAE_Major/: Untitled.ipynb  (+7 more)
trans_cal/: Cap_1.ipynb  Lista_1  Lista_1.ipynb  Seminario_1.ipynb
(+301 files in other folders)
