[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Thiago Esterci Fernandes <thiago.esterci@engenharia.ufjf.br>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
